# vipl_xsimulator

./: BetaInfluence.h  CMakeLists.txt  Evaluator.h  HighestDegreeEvaluator.hpp  InfluenceDistribution.h  LogDiffusion.h  PathSampler.h  README.md  RandomEvaluator.hpp  SampleManager.h  Sampler.hpp  SingleInfluence.h  SpreadSampler.h  common.h  graph_utils.h  main.cpp  unistd.h
